--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<h1 class="text-center m-5">Découvrez et achetez des collections exceptionnelles</h1>
+
+
+<!-- BARRE DE RECHERCHE -->
+<div class="container d-flex justify-content-center">
+
+    <nav class="navbar navbar-light bg-light col-6 justify-content-around">
+        <form class="form">
+          <input class="form-control " type="search" placeholder="Recherchez un nom de nft.." aria-label="Search">
+        </form>
+        <button class="btn btn-outline-success" type="submit">Recherche</button>
+      </nav>
+</div>
+<!-- / BARRE DE RECHERCHE -->
