--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,49 +1,34 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-md bg-light navbar-light fixed-topd bg-dark">
   <div class="container-fluid">
-    <!-- LOGO -->
-    <a class="navbar-brand" routerLink="#">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/Five-pointed_star.svg/220px-Five-pointed_star.svg.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-      Marketplace
+    <a class="navbar-brand" href="#">
+      <img src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/20950/yellow-star-clipart-md.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+      MarketPlace
     </a>
-    <!-- /LOGO -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav mx-auto">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+          <a class="nav-link" routerLink="">Accueil</a>
         </li>
-       
         <!-- CATEGORIES -->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" routerLink="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Catégories
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" routerLink="#">Art</a></li>
-            <li><a class="dropdown-item" routerLink="#">Animaux</a></li>
-            <li><a class="dropdown-item" routerLink="#">Fantasy</a></li>
-            <li><a class="dropdown-item" routerLink="#">Science-ficton</a></li>
-            <li><a class="dropdown-item" routerLink="#">Cinéma</a></li>
-            <li><a class="dropdown-item" routerLink="#">Histoire</a></li>
-            <li><a class="dropdown-item" routerLink="#">Technologie</a></li>
-          </ul>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/nft">NFT</a>
         </li>
+        
         <!-- /CATEGORIES -->
-        
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="#">ETH</a>
+          <a class="nav-link" routerLink="/eth">ETH</a>
         </li>
-
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="#">A propos</a>
+          <a class="nav-link" routerLink="">A propos</a>
         </li>
-        
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="#">Contact</a>
+          <a class="nav-link" routerLink="">Contact</a>
         </li>
-
       </ul>
-
-      <button class="btn btn-outline-primary" type="submit">Se connecter</button>
+      <a class="navbar-brand" routerLink="">
+        <img src="../../../assets/img/icons8-connexion-67.png" alt="Logo" width="30" class="d-inline-block align-text-top">
+        Connexion
+      </a>
     </div>
   </div>
 </nav>
