add connexion deconxion

--- a/src/app/component/home/accueil/accueil.component.html
+++ b/src/app/component/home/accueil/accueil.component.html
@@ -1,9 +1,9 @@
-<h1 class="text-center mt-5">Découvrez et achetez des collections exceptionnelles</h1>
-<h2 class="text-end mb-5 mx-5">NFT</h2>
+<h1 class="text-center mt-5">Découvrez & achetez <br>des collections <br> exceptionnelles de</h1>
+<h2 class="text-center mt-3 mb-5 mx-5">NFT</h2>
 
 
 <!-- barre de recherche -->
-<div class="input-group w-50 mx-auto">
+<div class="input-group w-75 mx-auto">
   <input type="text" class="form-control px-2" placeholder="Nom, utilisateur...">
   <div class="input-group-append">
       <button type="button" class="btn btn-dark btn-lg mx-2 px-4">Recherche</button>
@@ -11,10 +11,12 @@
 </div>
 <!-- / barre de recherche -->
 
-<h3 class="mt-5">Top seller</h3>
+<h3 class="mt-5 text-center">Top seller</h3>
+
+<app-carousel></app-carousel>
 
 <!-- card -->
-<div class="card m-5 mx-auto w-75" id="card">
+<!-- <div class="card m-5 mx-auto w-75" id="card">
   <div class="row">
     <div class="col-md-4">
       <img src="../../../assets/img/nft.jpg" class="img-fluid m-2" alt="...">
@@ -29,5 +31,5 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- / card -->
