--- a/src/app/component/home/accueil/accueil.component.css
+++ b/src/app/component/home/accueil/accueil.component.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
 }
-h1 {
+
+h1, h3 {
     color: white;
 }
 
@@ -14,7 +15,7 @@ h2 {
 
 button {
     background-color: yellow;
-    border: 3px solid;
+    border-radius: 0;
 }
 
 #card {
@@ -22,4 +23,6 @@ button {
     border-radius: 0;
 }
 
-
+input {
+    border-radius: 0;
+}
