--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -24,11 +24,13 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="">Contact</a>
         </li>
+        <li class="nav-item" *ngIf="checkIsLogged()">
+          <a class="nav-link" (click)="logout()">se déconnecter</a>
+        </li>
+        <li class="nav-item" *ngIf="!checkIsLogged()">
+          <a class="nav-link" routerLink="/login">Connexion</a>
+        </li>
       </ul>
-      <a class="navbar-brand" routerLink="">
-        <img src="../../../assets/img/icons8-connexion-67.png" alt="Logo" width="30" class="d-inline-block align-text-top">
-        Connexion
-      </a>
     </div>
   </div>
 </nav>
