--- a/src/app/component/nft/nft.component.css
+++ b/src/app/component/nft/nft.component.css
@@ -7,6 +7,7 @@ h1, p {
 
 img {
     border-radius: 40px;
+    color: white;
 }
 
 .btn {
@@ -15,4 +16,26 @@ img {
 
 h5 {
     background-color: yellow;
+}
+
+a img {
+    width: 30px;
+    color: white;
+}
+
+.nft {
+    position: relative;
+    display: inline-block;
+}
+
+.like {
+    position: absolute;
+    top: 20px;
+    right: 25px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 5px 5px;
+    border-radius: 15px;
+    cursor: pointer;
 }
