--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -1,55 +1,119 @@
-<form class="w-75 mx-auto mt-5">
-    <div class="row mb-4">
-      <div class="col">
-        <div class="form-outline">
-          <input type="text" id="form6Example1" class="form-control" />
-          <label class="form-label" for="form6Example1">Prénom</label>
+
+  <section class="h-100 bg-dark">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col">
+          <div class="card card-registration my-4">
+            <div class="row g-0">
+              <div class="col-xl-6 d-none d-xl-block block1">
+              </div>
+              <div class="col-xl-6">
+                <div class="card-body text-black">
+                  <h2 class="mb-5 text-uppercase text-center">Création de compte</h2>
+  
+                  <div class="row">
+                    <div class="col-md-6 mb-4">
+                      <div class="form-outline">
+                        <label class="form-label" for="form3Example1m">Prénom</label>
+                        <input type="text" id="form3Example1m" class="form-control form-control-lg" />
+                      </div>
+                    </div>
+                    <div class="col-md-6 mb-4">
+                      <div class="form-outline">
+                        <label class="form-label" for="form3Example1n">Nom</label>
+                        <input type="text" id="form3Example1n" class="form-control form-control-lg" />
+                      </div>
+                    </div>
+                  </div>
+  
+                  <div class="row">
+                    <div class="col-md-6 mb-4">
+                      <div class="form-outline datepicker w-100">
+                        <label for="birthdayDate" class="form-label">Date de naissance</label>
+                        <input type="date" id="birthay"  min="1940-01-01" max="2005-12-31" class="form-control form-control-lg" />
+                      </div>
+                    </div>
+                  </div>
+                  
+                  <div class="d-md-flex justify-content-start align-items-center mb-4 py-2">
+                    
+                    <h6 class="mb-0 me-4">Genre: </h6>
+                    
+                    <div class="form-check form-check-inline mb-0 me-4">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="femaleGender"
+                      value="option1" />
+                      <label class="form-check-label" for="femaleGender">Femme</label>
+                    </div>
+                    
+                    <div class="form-check form-check-inline mb-0 me-4">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="maleGender"
+                      value="option2" />
+                      <label class="form-check-label" for="maleGender">Homme</label>
+                    </div>
+                    
+                    <div class="form-check form-check-inline mb-0">
+                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="otherGender"
+                        value="option3" />
+                      <label class="form-check-label" for="otherGender">Autre</label>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-2 mb-4">
+                      <div class="form-outline">
+                        <label class="form-label" for="form3Example9">Numéro</label>
+                        <input type="text" id="form3Example9" class="form-control form-control-lg" />
+                      </div>
+                    </div>
+                    <div class="col-md-10 mb-4">
+                      <div class="form-outline mb-4">
+                        <label class="form-label" for="form3Example8">Adresse</label>
+                        <input type="text" id="form3Example8" class="form-control form-control-lg" />
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-4 mb-4">
+                      <div class="form-outline">
+                        <label class="form-label" for="form3Example9">Code Postal</label>
+                        <input type="text" id="form3Example9" class="form-control form-control-lg" />
+                      </div>
+                    </div>
+                    <div class="col-md-4 mb-4">
+                      <div class="form-outline mb-4">
+                        <label class="form-label" for="form3Example8">Ville</label>
+                        <input type="text" id="form3Example8" class="form-control form-control-lg" />
+                      </div>
+                    </div>
+                    <div class="col-md-4 mb-4">
+                      <div class="form-outline mb-4">
+                        <label class="form-label" for="form3Example8">Pays</label>
+                        <input type="text" id="form3Example8" class="form-control form-control-lg" />
+                      </div>
+                    </div>
+                  </div>
+  
+  
+                  
+                  <div class="form-outline mb-4">
+                    <label class="form-label" for="form3Example97">Email </label>
+                    <input type="text" id="form3Example97" class="form-control form-control-lg" />
+                  </div>
+                  <div class="form-outline mb-4">
+                    <label class="form-label" for="form3Example99">Mot de passe</label>
+                    <input type="text" id="form3Example99" class="form-control form-control-lg" />
+                  </div>
+  
+                  <div class="d-flex justify-content-center pt-3">
+                    <button type="button" class="btn btn-lg ms-2">Valider</button>
+                  </div>
+  
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="col">
-        <div class="form-outline">
-          <input type="text" id="form6Example2" class="form-control" />
-          <label class="form-label" for="form6Example2">Nom</label>
-        </div>
-      </div>
     </div>
-  
-    <!-- Text input -->
-    <div class="form-outline mb-4">
-      <input type="text" id="form6Example3" class="form-control" />
-      <label class="form-label" for="form6Example3">Company name</label>
-    </div>
-  
-    <!-- Text input -->
-    <div class="form-outline mb-4">
-      <input type="text" id="form6Example4" class="form-control" />
-      <label class="form-label" for="form6Example4">Address</label>
-    </div>
-  
-    <!-- Email input -->
-    <div class="form-outline mb-4">
-      <input type="email" id="form6Example5" class="form-control" />
-      <label class="form-label" for="form6Example5">Email</label>
-    </div>
-  
-    <!-- Number input -->
-    <div class="form-outline mb-4">
-      <input type="number" id="form6Example6" class="form-control" />
-      <label class="form-label" for="form6Example6">Phone</label>
-    </div>
-  
-    <!-- Message input -->
-    <div class="form-outline mb-4">
-      <textarea class="form-control" id="form6Example7" rows="4"></textarea>
-      <label class="form-label" for="form6Example7">Additional information</label>
-    </div>
-  
-    <!-- Checkbox -->
-    <div class="form-check d-flex justify-content-center mb-4">
-      <input class="form-check-input me-2" type="checkbox" value="" id="form6Example8" checked />
-      <label class="form-check-label" for="form6Example8"> Create an account? </label>
-    </div>
-  
-    <!-- Submit button -->
-    <button type="submit" class="btn btn-primary btn-block mb-4">Place order</button>
-  </form>
+  </section>
